@@ -1,6 +1,62 @@
 `read.tucson` <- function(fname, header = NULL, long = FALSE,
                           encoding = getOption("encoding"))
 {
+    input.ok <- function(dat) {
+        if (nrow(dat) == 0) {
+            return(FALSE)
+        }
+        series <- dat[[1]]
+        decade.yr <- dat[[2]]
+
+        ## Only one row per series can have
+        ## a "non-decadal" (not ending in zero) header year
+        part.decades <- which(decade.yr %% 10 != 0)
+        if (length(part.decades) > 0) {
+            idtable <- table(series[part.decades])
+            idx.bad <- which(idtable > 1)
+            n.bad <- length(idx.bad)
+            if (n.bad > 0) {
+                warn.fmt <-
+                    gettext(paste0("%d series with > 1 non-decade value ",
+                                   "in year column (%s)"),
+                            domain="R-dplR")
+                warning(sprintf(warn.fmt,
+                                n.bad,
+                                paste(names(idtable)[idx.bad], collapse=", ")),
+                        domain=NA)
+                return(FALSE)
+            }
+        }
+
+        x <- as.matrix(dat[-c(1, 2, 13)])
+        ## Number of values allowed per row depends on first year modulo 10
+        n.per.row <-
+            apply(x, 1,
+                  function(x) {
+                      notna <- which(!is.na(x))
+                      n.notna <- length(notna)
+                      if (n.notna == 0) {
+                          0
+                      } else {
+                          notna[n.notna]
+                      }
+                  })
+        full.per.row <- 10 - decade.yr %% 10
+        idx.bad <- which(n.per.row > full.per.row)
+        n.bad <- length(idx.bad)
+        if (n.bad > 0) {
+            warning(sprintf(ngettext(n.bad,
+                                     "%d row has too many values (decade %s)",
+                                     "%d rows have too many values (decades %s)",
+                                  domain="R-dplR"),
+                            n.bad, paste(decade.yr[idx.bad], collapse=", ")),
+                    domain=NA)
+            FALSE
+        } else {
+            TRUE
+        }
+    }
+
     ## Read data file into memory
     con <- file(fname, encoding = encoding)
     on.exit(close(con))
@@ -8,12 +64,11 @@
     ## Strip empty lines (caused by CR CR LF endings etc.)
     goodLines <- goodLines[nchar(goodLines) > 0]
     ## Text connection to the good lines
-    close(con)
-    con <- textConnection(goodLines)
+    tc <- textConnection(goodLines)
     if (is.null(header)) {
         ## Try to determine if the file has a header. This is failable.
         ## 3 lines in file
-        hdr1 <- readLines(con, n=1)
+        hdr1 <- readLines(tc, n=1)
         if (length(hdr1) == 0) {
             stop("file is empty")
         }
@@ -23,7 +78,8 @@
         is.head <- FALSE
         yrcheck <- suppressWarnings(as.numeric(substr(hdr1, 9, 12)))
         if (is.null(yrcheck) || length(yrcheck) != 1 || is.na(yrcheck) ||
-            yrcheck < -1e04 || yrcheck > 1e04 || round(yrcheck) != yrcheck) {
+                yrcheck < -1e04 || yrcheck > 1e04 ||
+            round(yrcheck) != yrcheck) {
             is.head <- TRUE
         }
         if (!is.head) {
@@ -45,6 +101,19 @@
             }
         }
         if (is.head) {
+            hdr1.split <- strsplit(str_trim(hdr1, side="both"),
+                                   split="[[:space:]]+")[[1]]
+            n.parts <- length(hdr1.split)
+            if (n.parts >= 3 && n.parts <= 13) {
+                yrdatacheck <-
+                    suppressWarnings(as.numeric(hdr1.split[2:n.parts]))
+                if (!(is.null(yrdatacheck) || any(is.na(yrdatacheck)) ||
+                      any(round(yrdatacheck) != yrdatacheck))) {
+                    is.head <- FALSE
+                }
+            }
+        }
+        if (is.head) {
             cat(gettext("There appears to be a header in the rwl file\n",
                         domain="R-dplR"))
         } else {
@@ -56,46 +125,83 @@
     } else {
         is.head <- header
     }
-    close(con)
-    con <- textConnection(goodLines) # back to start
-    if (is.head) {
-        ## Read 4th line - should be first data line
-        dat1 <- readLines(con, n=4)
-        if (length(dat1) < 4) {
-            stop("file has under 4 lines")
-        }
-        dat1 <- dat1[4]
-    } else {
-        dat1 <- readLines(con, n=1)
-        if (length(dat1) == 0) {
-            stop("file is empty")
-        }
-    }
-    yrcheck <- as.numeric(substr(dat1, 9, 12))
-    if (is.null(yrcheck) || length(yrcheck) != 1) {
-        stop(gettextf("cols %d-%d of first data line not a year", 9, 12))
-    }
 
-    close(con)
-    con <- textConnection(goodLines) # back to start
+    tc <- textConnection(goodLines) # back to start
     skip.lines <- ifelse(is.head, 3, 0)
-    ## Using a connection instead of a file name in read.fwf allows the
-    ## function to support different encodings.
+    ## Using a connection instead of a file name in read.fwf and
+    ## read.table allows the function to support different encodings.
     if (long) {
-        dat <- read.fwf(con, c(7, 5, rep(6, 10)), skip=skip.lines,
-                        strip.white=TRUE, blank.lines.skip=TRUE,
-                        colClasses=c("character", rep("integer", 11)))
+        ## Reading 11 years per decade allows nonstandard use of stop
+        ## marker at the end of a line that already has 10
+        ## measurements.  Such files exist in ITRDB.
+        fields <- c(7, 5, rep(6, 11))
     } else {
-        dat <- read.fwf(con, c(8, 4, rep(6, 10)), skip=skip.lines,
-                        strip.white=TRUE, blank.lines.skip=TRUE,
-                        colClasses=c("character", rep("integer", 11)))
+        fields <- c(8, 4, rep(6, 11))
     }
-    ## Remove any blank lines at the end of the file, for instance
+    ## First, try fixed width columns as in Tucson "standard"
+    dat <-
+        tryCatch(read.fwf(tc, widths=fields, skip=skip.lines, comment.char="",
+                          strip.white=TRUE, blank.lines.skip=FALSE,
+                          colClasses=c("character", rep("integer", 11),
+                          "character")),
+                 error = function(...) {
+                     ## If predefined column classes fail
+                     ## (e.g. missing values marked with "."), convert
+                     ## types manually
+                     tc <- textConnection(goodLines) # back to start
+                     tmp <- read.fwf(tc, widths=fields, skip=skip.lines,
+                                     strip.white=TRUE, blank.lines.skip=FALSE,
+                                     colClasses="character", comment.char="")
+                     for (idx in 2:12) {
+                         asnum <- as.numeric(tmp[[idx]])
+                         if (!identical(round(asnum), asnum)) {
+                             stop("non-integral numbers found")
+                         }
+                         tmp[[idx]] <- as.integer(asnum)
+                     }
+                     tmp
+                 })
     dat <- dat[!is.na(dat[[2]]), , drop=FALSE] # requires non-NA year
-
+    ## If that fails, try columns separated by white space (non-standard)
+    if (!input.ok(dat)) {
+        warning("fixed width failed, trying variable width columns")
+        tc <- textConnection(goodLines) # back to start
+        ## Number of columns is decided by length(col.names)
+        dat <-
+            tryCatch(read.table(tc, skip=skip.lines, blank.lines.skip=FALSE,
+                                comment.char="",col.names=letters[1:13],
+                                colClasses=c("character", rep("integer", 11),
+                                "character"), fill=TRUE),
+                     error = function(...) {
+                         ## In case predefined column classes fail
+                         tc <- textConnection(goodLines) # back to start
+                         tmp <- read.table(tc, skip=skip.lines,
+                                           blank.lines.skip=FALSE,
+                                           comment.char="", fill=TRUE,
+                                           col.names=letters[1:13],
+                                           colClasses="character")
+                         tmp[[1]] <- as.character(tmp[[1]])
+                         for (idx in 2:12) {
+                             asnum <- as.numeric(tmp[[idx]])
+                             if (!identical(round(asnum), asnum)) {
+                                 stop("non-integral numbers found")
+                             }
+                             tmp[[idx]] <- as.integer(asnum)
+                         }
+                         tmp
+                     })
+        dat <- dat[!is.na(dat[[2]]), , drop=FALSE] # requires non-NA year
+        if (!input.ok(dat)) {
+            stop("failed to read rwl file")
+        }
+    }
     series <- dat[[1]]
     series.ids <- unique(series)
     nseries <- length(series.ids)
+    seq.series <- seq_len(nseries)
+    series.index <- match(series, series.ids)
+    decade.yr <- dat[[2]]
+    extra.col <- dat[[13]]
 
     cat(sprintf(ngettext(nseries,
                          "There is %d series\n",
@@ -103,113 +209,75 @@
                          domain="R-dplR"),
                 nseries))
 
-    series.index <- match(series, series.ids)
-    decade.yr <- dat[[2]]
-
-    ## Only one row per series can have
-    ## a "non-decadal" (not ending in zero) header year
-    part.decades <- which(decade.yr %% 10 != 0)
-    if (length(part.decades) > 0) {
-        idtable <- table(series.index[part.decades])
-        idx.bad <- which(idtable > 1)
-        n.bad <- length(idx.bad)
-        if (n.bad > 0) {
-            warning("bad fixed-width columns?")
-            stop(sprintf(gettext(paste0("%d series with > 1 non-decade value ",
-                                        "in year column (%s)"),
-                                 domain="R-dplR"),
-                         n.bad,
-                         paste(series.ids[as.integer(names(idtable)[idx.bad])],
-                               collapse=", ")),
-                 domain=NA)
-        }
-    }
-
     min.year <- (min(decade.yr) %/% 10) * 10
     max.year <- ((max(decade.yr)+10) %/% 10) * 10
     span <- max.year - min.year + 1
 
     rw.vec <- NA*vector(mode="numeric", length=nseries*span)
-    series.min <- rep.int(as.integer(max.year+1), nseries)
-    series.max <- rep.int(as.integer(min.year-1), nseries)
+    scratch <- rep.int(as.integer(min.year-1), nseries)
     prec.rproc <- rep.int(as.integer(1), nseries)
-    x <- as.matrix(dat[, -c(1, 2), drop=FALSE])
+    x <- as.matrix(dat[-c(1, 2, 13)])
 
-    ## Number of values allowed per row depends on first year modulo 10
-    n.per.row <-
-        apply(x, 1,
-              function(x) {
-                  notna <- which(!is.na(x))
-                  n.notna <- length(notna)
-                  if (n.notna == 0) {
-                      0
-                  } else {
-                      notna[n.notna]
-                  }
-              })
-    idx.bad <- which(n.per.row > 10 - decade.yr %% 10)
-    n.bad <- length(idx.bad)
-    if (n.bad > 0) {
-        idtable <- table(series.index[n.bad])
-        if (any(idtable > 1)) {
-            warning("bad fixed-width columns?")
-        }
-        stop(sprintf(ngettext(n.bad,
-                              "%d row crosses a decade boundary (decade %s)",
-                              "%d rows cross a decade boundary (decades %s)",
-                              domain="R-dplR"),
-                     n.bad, paste(decade.yr[idx.bad], collapse=", ")),
-             domain=NA)
-    }
-
-    .C(rwl.readloop,
-       series.index,
-       decade.yr,
-       as.vector(x),
-       nrow(x),
-       ncol(x),
-       as.integer(min.year),
-       rw.vec,
-       as.integer(span),
-       as.integer(nseries),
-       series.min,
-       series.max,
-       prec.rproc,
+    .C(rwl.readloop, series.index, decade.yr, as.vector(x),
+       nrow(x), ncol(x), as.integer(min.year), rw.vec,
+       as.integer(span), as.integer(nseries), scratch, prec.rproc,
        NAOK=TRUE, DUP=FALSE)
-    seq.series <- seq_len(nseries)
+    rw.mat <- matrix(rw.vec, ncol=nseries, nrow=span)
+    rownames(rw.mat) <- min.year:max.year
+
+    ## Convert values <= 0 to NA (either precision)
+    rw.mat[rw.mat <= 0] <- NA
+    ## The operations in the loop depend on the precision of each series.
+    ## It's not exactly clear whether the Tucson format allows mixed
+    ## precisions in the same file, but we can support that in any case.
+    for (i in seq.series) {
+        if (!(prec.rproc[i] %in% c(100, 1000))) {
+            these.rows <- which(series.index == i)
+            these.decades <- decade.yr[these.rows]
+            has.stop <- which(extra.col[these.rows] %in% c("999", "-9999"))
+            if (length(has.stop) == 1 &&
+                which.max(these.decades) == has.stop) {
+                warning(gettextf("bad location of stop marker in series %s",
+                                 series.ids[i], domain="R-dplR"))
+                if (extra.col[these.rows[has.stop]] == "999") {
+                    prec.rproc[i] <- 100
+                } else {
+                    prec.rproc[i] <- 1000
+                }
+            }
+        }
+        this.prec.rproc <- prec.rproc[i]
+        if (this.prec.rproc == 100) {
+            ## Convert (the last) stop marker 999 to NA (precision 0.01)
+            stop.loc <- which(rw.mat[, i] == 999)
+            n.stop <- length(stop.loc)
+            if (n.stop > 0) {
+                rw.mat[stop.loc[n.stop], i] <- NA
+            }
+        } else if (this.prec.rproc != 1000) {
+            stop(gettextf("precision unknown in series %s", series.ids[i],
+                          domain="R-dplR"))
+        }
+        ## Convert to mm
+        rw.mat[, i] <- rw.mat[, i] / this.prec.rproc
+    }
+    the.range <-
+        as.matrix(apply(rw.mat, 2, yr.range, yr.vec=min.year:max.year))
+    series.min <- the.range[1, ]
+    series.max <- the.range[2, ]
     cat(paste0(seq.series, "\t",
                series.ids, "\t",
                series.min, "\t",
                series.max, "\t",
                1 / prec.rproc, "\n"), sep="")
-    rw.mat <- matrix(rw.vec, ncol=nseries, nrow=span)
-    rownames(rw.mat) <- min.year:max.year
 
-    ## Convert values < 0 to NA (either precision)
-    rw.mat[rw.mat < 0] <- NA
-    ## The operations in the loop depend on the precision of each series.
-    ## It's not exactly clear whether the Tucson format allows mixed
-    ## precisions in the same file, but we can support that in any case.
-    for (i in seq.series) {
-        this.prec.rproc <- prec.rproc[i]
-        if (this.prec.rproc == 100) {
-            ## Convert stop marker (and any other) 999 to NA (precision 0.01)
-            rw.mat[rw.mat[, i] == 999, i] <- NA
-        } else if (this.prec.rproc != 1000) {
-            stop(gettextf("precision unknown in series %s", series.ids[i]))
-        }
-        ## Convert to mm
-        rw.mat[, i] <- rw.mat[, i] / this.prec.rproc
-    }
-
-    ## trim the front and back of the output file to remove blank
-    ## rows.
-    good.rows <- which(!apply(is.na(rw.mat), 1, all))
-    n.good <- length(good.rows)
-    if (n.good == 0) {
+    ## trim the front and back of the output to remove blank rows
+    good.series <- !is.na(series.min)
+    if (!any(good.series)) {
         stop("file has no good data")
     }
-    incl.rows <- good.rows[1]:good.rows[n.good]
+    incl.rows <- seq.int(min(series.min[good.series])-min.year+1,
+                         max(series.max[good.series])-min.year+1)
     ## trim
     rw.mat <- rw.mat[incl.rows, , drop=FALSE]
     ## Fix internal NAs. These are coded as 0 in the DPL programs
